--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="date-picker">
     <div class="input-container">
-      <input type="text" class="date-input" placeholder="dd/mm/yy" readonly>
+      <input type="text" class="date-input" placeholder="dd/mm/yy">
       <span class="calendar-icon">📅</span>
     </div>
     
@@ -39,5 +39,6 @@
       </div>
     </div>
   </div>
+  
 </body>
 </html>
